# trmm_proj

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  build.bat  run_benchmark.bat  run_tests.bat  trmm.cpp  trmm.hpp  upload_to_git.bat
.github/workflows/: ci.yml
src/: benchmark.cpp
tests/: test_trmm.cpp
